Fix text overflowing issues

--- a/index.css
+++ b/index.css
@@ -8,7 +8,8 @@ html, body {
     background-color: #FFF7ED;
     font-family: "Inter", sans-serif;
     height: 100%;
-    color: #161616;;
+    color: #161616;
+    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -25,12 +26,17 @@ body {
     width: 100vw;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+    max-width: 100%;
 }
 
 .section {
     flex: 1;
     display: flex;
     flex-direction: column;
+    max-width: 100%;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .padding{ 
@@ -724,6 +730,10 @@ footer {
 
 .host-details-bottom-section {
     gap: 0.75rem;
+}
+
+.bottom-section-description {
+    max-width: 700px;
 }
 
 .host-details-bottom-section .van-info-price {
